--- a/emotion_prediction/templates/logiin.html
+++ b/emotion_prediction/templates/logiin.html
@@ -30,13 +30,6 @@
         <link rel="stylesheet" href="{% static "css/rs.css" %}">
       
       
-        <!-- =======================================================
-        * Template Name: Append
-        * Updated: Sep 18 2023 with Bootstrap v5.3.2
-        * Template URL: https://bootstrapmade.com/append-bootstrap-website-template/
-        * Author: BootstrapMade.com
-        * License: https://bootstrapmade.com/license/
-        ======================================================== -->
       </head>
       
       <body class="index-page" data-bs-spy="scroll" data-bs-target="#navmenu">
@@ -44,7 +37,7 @@
         <!-- ======= Header ======= -->
         <header id="header" class="header fixed-top d-flex align-items-center">
           <div class="container-fluid d-flex align-items-center justify-content-between">
-            <a style=" align-items: start;"href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+            <a style=" align-items: start;" href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
               <img src="{% static 'assets/img/icon.png' %}">
                   <h3>Emojion</h3>
                  
@@ -79,14 +72,14 @@
                         <div class="inputbox">
                             <label for="username">Username</label>
                             <br><br>
-                            <input type="text" id="username" name="username" required>
+                            <input type="text"  style="font-size: 20px;"id="username" name="username" required>
 
                         </div>
                         
                         <div class="inputbox">
                             <label for="username">Password</label>
                             <br><br>
-                            <input type="password" id="password" name="password" required>
+                            <input type="password" style="font-size: 20px;" id="password" name="password" required>
 
                         </div>
                         <button type="submit">Log In</button><br><br>
