--- a/emotion_prediction/templates/sign_up.html
+++ b/emotion_prediction/templates/sign_up.html
@@ -80,29 +80,29 @@
                   
                         <div class="inputbox">
                             
-                <input type="text" id="lastname" name="last_name" placeholder="Last Name"required>
+                <input type="text" style="font-size: 10px;" id="lastname" name="last_name" placeholder="Last Name"required>
             </div>
             <div class="inputbox">
                 
-                <input type="text" id="firstname" name="first_name" placeholder="First Name" required>
+                <input type="text" style="font-size: 10px;" id="firstname" name="first_name" placeholder="First Name" required>
             </div>
             <div class="inputbox">
 
-                <input type="text" id="username" name="username" placeholder="Username" required>
+                <input type="text" style="font-size: 10px;" id="username" name="username" placeholder="Username" required>
             </div>
             <div class="inputbox">
 
-                <input type="email" id="email" name="email" placeholder="Email" required>
+                <input type="email" style="font-size: 10px;" id="email" name="email" placeholder="Email" required>
 
                         </div>
                         
                         <div class="inputbox">
                             
-                <input type="password" id="password" name="password" placeholder="Password" minlength="8" required>
+                <input type="password" style="font-size: 10px;" id="password" name="password" placeholder="Password" minlength="8" required>
             </div>
             <div class="inputbox">
 
-                <input type="password" id="confirm_password" name="confirm_password" placeholder="Retype Password"minlength="8" required>
+                <input type="password" style="font-size: 10px;" id="confirm_password" name="confirm_password" placeholder="Retype Password"minlength="8" required>
 
                         </div>
                        <button type="submit">Sign Up</button><br><br>
