--- a/emotion_prediction/static/css/rs.css
+++ b/emotion_prediction/static/css/rs.css
@@ -10,7 +10,7 @@ section {
     align-items: center;
     min-height: 100vh;
     width: 100%;
-    background: url('../img/sunset.png') no-repeat;
+    background: url('../img/bg2.jpg') no-repeat;
     background-size: cover;
 }
 .x{
@@ -19,7 +19,7 @@ section {
 }
 .form-box {
     position: relative;
-    width: 90%; /* Adjusted width to 80% of the parent container */
+    width: 120%; /* Adjusted width to 80% of the parent container */
     max-width: 500px; /* Optional: Set a maximum width if needed */
     height: 500px; /* Adjusted height to 300px */
     background: transparent;
@@ -34,7 +34,7 @@ section {
 
 
 h2 {
-    font-size: 2em;
+    font-size: 5em;
     color: white;
     text-align: center;
     margin-bottom: 20px;
