--- a/emotion_prediction/templates/registration/password_reset_form.html
+++ b/emotion_prediction/templates/registration/password_reset_form.html
@@ -5,16 +5,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "css/rs.css" %}">
+    <link rel="stylesheet" href="{% static "css/rs_form.css" %}">
     <title>Document</title>
 </head>
+
 <body>
     <section>
         <div class="form-box">
             <div class="form-value">
                 <form method='POST' action="">
                     {% csrf_token %}
-                    <h2>Reset Password</h2>
+                    <h2>Reset <br>Password</h2>
+                    <br>
+                    <br>
                     <div class="inputbox">
                        
                         {{ form.email }} <!-- Use the name of your email field -->
