--- a/emotion_prediction/static/css/sign_up.css
+++ b/emotion_prediction/static/css/sign_up.css
@@ -13,83 +13,85 @@ section {
     background: url('../img/bg2.jpg') no-repeat;
     background-size: cover;
 }
-.x{
-    color:red;
+
+.error {
+    color: red!important; 
     text-align: center;
 }
+
+
 .form-box {
     position: relative;
-    width: 120%; /* Adjusted width to 80% of the parent container */
-    max-width: 500px; /* Optional: Set a maximum width if needed */
-    height: 500px; /* Adjusted height to 300px */
+    width: 80%;
+    max-width: 450px;
+    height: 545px;
     background: transparent;
     border: 2px solid rgba(225, 225, 225, 0.5);
-    border-radius: 20px;
-    backdrop-filter: blur(15px);
+    border-radius: 15px;
+    backdrop-filter: blur(10px);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 15px;
 }
 
-
 h2 {
-    font-size: 5em;
+    font-size: 1.5em;
     color: white;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 
 .inputbox {
     position: relative;
-    margin: 30px 0;
-    width: 100%; /* Adjusted width to 100% */
-    max-width: 310px; /* Optional: Set a maximum width if needed */
+    margin: 15px ;
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 300%;
+    width: 350px;
+    
+    
 }
 
 .inputbox label {
     position: absolute;
-    top: 15px;
-    left: 5px;
+    top: 10px;
+    left: -10px;
     color: white;
-    font-size: 1em;
+    font-size: 100px;
     pointer-events: none;
-    transition: .5s;
+    transition: .3s;
 }
-
 
 .inputbox input {
     width: 100%;
-    height: 40px;
-    background: transparent;
-    border: 2px solid rgba(225, 225, 225, 0.5);
-    border-radius: 5px;
+    height: 50px;
+    background: pink;
+    border: 1px solid rgba(225, 225, 225, 0.5);
+    border-radius: 3px;
     outline: none;
-    font-size: 25px;
-    padding: 5px 35px 5px 10px;
+    font-size:6.5em;
+    padding: 5px 8px;
     color: #fff;
     box-sizing: border-box;
-    transition: border-color 0.5s;
-}
-
-input:focus ~ label,
-input:valid ~ label {
-    top: -20px;
+    transition: border-color 0.3s;
 }
 
 button {
     width: 100%;
-    height: 40px;
-    border-radius: 40px;
+    height: 30px;
+    border-radius: 30px;
     background: #fff;
     border: none;
     outline: none;
     cursor: pointer;
-    font-size: 1em;
+    font-size: 0.8em;
     font-weight: 600;
-    margin-top: 20px;
+    margin-top: 15px;
 }
+
 #header {
     background-color: rgb(102, 97, 97);
-    padding:3px 0; /* Optional: Adjust padding as needed */
+    padding: 5px 0;
 }
