--- a/emotion_prediction/templates/login_error.html
+++ b/emotion_prediction/templates/login_error.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 
 <!DOCTYPE html>
@@ -30,13 +29,6 @@
         <link rel="stylesheet" href="{% static "css/rs.css" %}">
       
       
-        <!-- =======================================================
-        * Template Name: Append
-        * Updated: Sep 18 2023 with Bootstrap v5.3.2
-        * Template URL: https://bootstrapmade.com/append-bootstrap-website-template/
-        * Author: BootstrapMade.com
-        * License: https://bootstrapmade.com/license/
-        ======================================================== -->
       </head>
       
       <body class="index-page" data-bs-spy="scroll" data-bs-target="#navmenu">
@@ -44,7 +36,7 @@
         <!-- ======= Header ======= -->
         <header id="header" class="header fixed-top d-flex align-items-center">
           <div class="container-fluid d-flex align-items-center justify-content-between">
-            <a style=" align-items: start;"href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+            <a style=" align-items: start;" href="{% url 'home' %}" class="logo d-flex align-items-center me-auto me-xl-0">
               <img src="{% static 'assets/img/icon.png' %}">
                   <h3>Emojion</h3>
                  
@@ -73,21 +65,20 @@
             <div class="form-value">
                 <form method="post" action="">
                     {% csrf_token %}
-                    <br>
+                    
 
                     <div class="x"> <p>Email or password wrong!</p></div>
                         <div class="inputbox">
-                            
                             <label for="username">Username</label>
                             <br><br>
-                            <input type="text" id="username" name="username" required>
+                            <input type="text"  style="font-size: 20px;"id="username" name="username" required>
 
                         </div>
                         
                         <div class="inputbox">
                             <label for="username">Password</label>
                             <br><br>
-                            <input type="password" id="password" name="password" required>
+                            <input type="password" style="font-size: 20px;" id="password" name="password" required>
 
                         </div>
                         <button type="submit">Log In</button><br><br>
@@ -104,7 +95,3 @@
     </section>
 </body>
 </html>
-
-
-
-<div class="x"> <p>Email or password wrong!</p></div>
