--- a/emotion_prediction/templates/logiin.html
+++ b/emotion_prediction/templates/logiin.html
@@ -83,9 +83,9 @@
 
                         </div>
                         <button type="submit">Log In</button><br><br>
-            <p><a href="{% url 'password_reset' %}">Forgotten your password?</a></p>
-            <h5>Don't have an account?</h5>
-            <a href="{% url 'register' %}">Sign Up</a>
+            <p><a href="{% url 'password_reset' %}"><center>Forgotten your password?</center></a></p>
+            <center> <h5>Don't have an account?</h5></center>
+          <center><a href="{% url 'register' %}">Sign Up</a></center>
                         <br><br>
                     
 
