--- a/emotion_prediction/templates/emoji.html
+++ b/emotion_prediction/templates/emoji.html
@@ -49,12 +49,18 @@
 	
 <div class="container">
 
-	<form>
+	<!-- <form>
         <input id="text" type="text" name="" placeholder="Enter text here...">
-    </form>  
+    </form>   -->
+
+	<form method="post" action="{% url 'paragraph' %}">
+		{% csrf_token %}
+		{{ form.story }}
+		<button type="submit" name="analyze" id="analyze" class="analyze_btn">ANALYZE</button>
+	</form>
     <button type="submit1" name="paragraph" id="paragraph" class="paragraph_btn" >PARAGRAPH</button>
     <a href="{%url 'whole' %}"><button type="submit2" name="whole" id="whole" class="whole_btn">WHOLE</button></a>
-    <button type="submit3" name="analyze" id="analyze" class="analyze_btn">ANALYZE</button>
+    <!-- <button type="submit3" name="analyze" id="analyze" class="analyze_btn">ANALYZE</button> -->
 
 
 	<h6 class="fear">FEAR</h6>
@@ -82,19 +88,33 @@
 
 	<img class="img6" src="{%static 'assets/img/surprise.png' %}">
 	<br>
-	<p class="p1">0%</p>
+	{%if success %}
+		<p class="p1">{{ analyzed_story.fear }}%</p>
 
-	<p class="p2">0%</p>
+		<p class="p2">{{ analyzed_story.anger }}%</p>
 
-	<p class="p3">0%</p>
+		<p class="p3">{{ analyzed_story.joy }}%</p>
 
-	<p class="p4">0%</p>
+		<p class="p4">{{ analyzed_story.sadness }}%</p>
 
-	<p class="p5">0%</p>
+		<p class="p5">{{ analyzed_story.disgust }}%</p>
 
-	<p class="p6">0%</p>
+		<p class="p6">{{ analyzed_story.surprise }}%</p>
+	{% else %}
+		<p class="p1">0%</p>
+
+		<p class="p2">0%</p>
+
+		<p class="p3">0%</p>
+
+		<p class="p4">0%</p>
+
+		<p class="p5">0%</p>
+
+		<p class="p6">0%</p>
+	{% endif %}
 <br>
-<p class="emotion">Emotion Predicted:</p>
+<p class="emotion">Emotion Predicted: {{ analyzed_story.analyzed_emotion }}</p>
 </div>
 
 <script>
