--- a/emotion_prediction/templates/profile.html
+++ b/emotion_prediction/templates/profile.html
@@ -41,7 +41,7 @@
 				</ul>
 				
 			   <ul>
-				  <li> <a href="{%url 'home' %}">Logout</a></li>
+				  <li> <a href="{%url 'logout' %}">Logout</a></li>
 				  
 				</ul>
 			  </div>
