--- a/emotion_prediction/templates/emoji.html
+++ b/emotion_prediction/templates/emoji.html
@@ -60,6 +60,8 @@
 	</form>
     <button type="submit1" name="paragraph" id="paragraph" class="paragraph_btn" >PARAGRAPH</button>
     <a href="{%url 'whole' %}"><button type="submit2" name="whole" id="whole" class="whole_btn">WHOLE</button></a>
+	<a href="{% url 'download-result' %}">Download Result</a>
+
     <!-- <button type="submit3" name="analyze" id="analyze" class="analyze_btn">ANALYZE</button> -->
 
 
