--- a/emotion_prediction/templates/registration/pdf.html
+++ b/emotion_prediction/templates/registration/pdf.html
@@ -5,17 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sentence and Emotion PDF</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f4f4;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
+
 
     h1 {
       color: #333;
@@ -57,6 +47,10 @@
     tr:hover {
       background-color: #e0e0e0;
     }
+    @page {
+         size: A4 portrait; 
+         /* margin: 10mm 10mm 10mm 10mm; */
+      }
   </style>
 </head>
 <body>
@@ -72,11 +66,13 @@
         </tr>
       </thead>
       <tbody>
+        
         <tr>
-          <td>sentence</td>
-          <td>Joy</td>
+          <td>{{ recent_user_story.phrase }}</td>
+          <td>{{ recent_user_story.analyzed_emotion }}</td>
         </tr>
-        <tr>
+     
+        <!-- <tr>
           <td>sentence</td>
           <td>Sadness</td>
         </tr>
@@ -95,7 +91,7 @@
         <tr>
           <td>sentence</td>
           <td>Anger</td>
-        </tr>
+        </tr> -->
         
       </tbody>
     </table>
