--- a/emotion_prediction/templates/registration/pdf.html
+++ b/emotion_prediction/templates/registration/pdf.html
@@ -49,7 +49,7 @@
     }
     @page {
          size: A4 portrait; 
-         /* margin: 10mm 10mm 10mm 10mm; */
+         margin: 20mm 20mm 20mm 20mm;
       }
   </style>
 </head>
