--- a/emotion_prediction/templates/emoji-whole.html
+++ b/emotion_prediction/templates/emoji-whole.html
@@ -96,7 +96,7 @@
 <br>
 <p class="emotion">Emotion Predicted:</p>
 </div>
-script>
+<script>
 	// JavaScript function to toggle the active state of the buttons
 	function toggleButton(button) {
 		// Remove active class from all buttons
