--- a/emotion_prediction/static/assets/css/emoji-whole.css
+++ b/emotion_prediction/static/assets/css/emoji-whole.css
@@ -16,7 +16,7 @@ h1{
 .container{
 	position: fixed;
 	margin-left: 25px;
-	padding-top: 10px;
+	padding-bottom  : 20px;
 }
 
 
@@ -851,20 +851,18 @@ margin-top: 25px;
     list-style: none;
     align-items: center;
 	  float: right;
-	  margin-right: 30px;
+	  margin-right: 20px;
 	  padding-top: 25px;
 	  background-color: white;
   }
 	.navmenu ul img{
 		height: 30px;
 		width: auto;
-		margin-left: 30px;
 		background-color: white;
 	}
 
   .navmenu li {
     position: relative;
-	margin-left: 20px;
   }
 
   .navmenu a,
